--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -341,7 +341,7 @@ jobs:
       - name: 'Create creds.txt'
         shell: python
         run: |
-          f = open("{{ github.workspace }}\${{ env.project-git }}\creds.txt", "w")
+          f = open("${{ github.workspace }}\${{ env.project-git }}\creds.txt", "w")
           f.write("${{ secrets.SPOTIFY_TOKEN }}")
           f.close()
       - name: 'Configure ${{ env.project-git }}  64-bit'
