--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,14 +55,17 @@ configure_file(
     ../package/README.txt
 )
 
-# Read Spotify credentials from creds.txt
-# In this format {client_id}:{client_secre}
-# Make sure that there's no empty new line
-file(READ "creds.txt" CREDS)
-string(REGEX REPLACE "\n$" "" CREDS "${CREDS}")
-string(REGEX REPLACE "\r\n$" "" CREDS "${CREDS}")
+if (NOT CREDS)
+    # Read Spotify credentials from creds.txt
+    # In this format {client_id}:{client_secre}
+    # Make sure that there's no empty new line
+    file(READ "creds.txt" CREDS)
+    string(REGEX REPLACE "\n$" "" CREDS "${CREDS}")
+    string(REGEX REPLACE "\r\n$" "" CREDS "${CREDS}")
+endif()
 add_definitions(-DSPOTIFY_CREDENTIALS=\"${CREDS}\")
 message(STATUS "TOKEN: '${CREDS}'")
+
 set(tuna_ui
         src/gui/tuna_gui.ui
         src/gui/output_edit_dialog.ui
