don't build on lang and readme file PRs

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -1,6 +1,9 @@
 name: nightly
 on:
   pull_request:
+    paths-ignore:
+      - '**.md'
+      - '**.ini'
   push:
     paths-ignore:
       - '**.md'
