Fixed CI issues
Removed VLC paths
Fixed QTPATH
Fixed build path

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -106,12 +106,11 @@ jobs:
           echo "=> Building plugin for macOS."
           mkdir -p build && cd build
           cmake .. \
-            -DQTDIR=/usr/local/opt/qt \
+            -DQTDIR=/tmp/obsdeps \
             -DLIBOBS_INCLUDE_DIR=${{ github.workspace }}/obs-studio/libobs \
             -DLIBOBS_LIB=${{ github.workspace }}/obs-studio/build/libobs/libobs.dylib \
             -DOBS_FRONTEND_LIB:STRING="${{ github.workspace }}/obs-studio/build/UI/obs-frontend-api/libobs-frontend-api.dylib" \
             -DCMAKE_BUILD_TYPE=RelWithDebInfo \
-            -DVLC_INCLUDE_DIR=../vlc/ \
             -DCREDS="${{ secrets.SPOTIFY_TOKEN }}" \
             -DLASTFM_CREDS="${{ secrets.LASTFM_KEY }}" \
             -DCMAKE_INSTALL_PREFIX=/usr \
@@ -198,7 +197,7 @@ jobs:
       shell: bash
       run: |
         cmake -S ${{github.workspace}} -B ${{github.workspace}}/build/ \-G "Unix Makefiles" \
-          -DCMAKE_INSTALL_PREFIX=${{github.workspace}}/dist -DVLC_INCLUDE_DIR=${{github.workspace}}/vlc/ -DOBS_FRONTEND_INCLUDE=/usr/include/obs \
+          -DCMAKE_INSTALL_PREFIX=${{github.workspace}}/dist -DOBS_FRONTEND_INCLUDE=/usr/include/obs \
           -DCREDS="${{ secrets.SPOTIFY_TOKEN }}" \
           -DLASTFM_CREDS="${{ secrets.LASTFM_KEY }}"
         cmake --build ${{github.workspace}}/build/ --parallel 4 --target install
@@ -310,7 +309,7 @@ jobs:
         if: steps.build-cache-obs-32.outputs.cache-hit != 'true'
         working-directory: ${{ github.workspace }}/obs-studio
         run: |
-          mkdir .\build32
+          if not exist .\build32 mkdir .\build32
           cd .\build32
           cmake -G "${{ env.CMAKE_GENERATOR }}" -A Win32 -DCMAKE_SYSTEM_VERSION="${{ env.CMAKE_SYSTEM_VERSION }}" -DQTDIR="${{ github.workspace }}\cmbuild\QT\${{ env.QT_VERSION }}\msvc2017" -DDepsPath="${{ github.workspace }}\cmbuild\deps\win32" -DBUILD_CAPTIONS=YES -DCOPIED_DEPENDENCIES=NO -DCOPY_DEPENDENCIES=YES ..
       - name: 'Build OBS-Studio 32-bit'
@@ -333,7 +332,7 @@ jobs:
         if: steps.build-cache-obs-64.outputs.cache-hit != 'true'
         working-directory: ${{ github.workspace }}/obs-studio
         run: |
-          mkdir .\build64
+          if not exist .\build32 mkdir .\build64
           cd .\build64
           cmake -G "${{ env.CMAKE_GENERATOR }}" -A x64 -DCMAKE_SYSTEM_VERSION="${{ env.CMAKE_SYSTEM_VERSION }}" -DQTDIR="${{ github.workspace }}\cmbuild\QT\${{ env.QT_VERSION }}\msvc2017_64" -DDepsPath="${{ github.workspace }}\cmbuild\deps\win64" -DBUILD_CAPTIONS=YES -DCOPIED_DEPENDENCIES=NO -DCOPY_DEPENDENCIES=YES ..
       - name: 'Build OBS-Studio 64-bit'
@@ -352,7 +351,6 @@ jobs:
             -DDepsPath="${{ github.workspace }}\cmbuild\deps\win64" `
             -DLibObs_DIR="${{ github.workspace }}\obs-studio\build64\libobs" `
             -DLIBOBS_INCLUDE_DIR="${{ github.workspace }}\obs-studio\libobs" `
-            -DVLC_INCLUDE_DIR=${{ github.workspace }}\${{ env.project-git }}\vlc `
             -DLIBOBS_LIB="${{ github.workspace }}\obs-studio\build64\libobs\RelWithDebInfo\obs.lib" `
             -DCREDS="${{ secrets.SPOTIFY_TOKEN }}" `
             -DLASTFM_CREDS="${{ secrets.LASTFM_KEY }}" `
@@ -370,7 +368,6 @@ jobs:
           -DLIBOBS_INCLUDE_DIR="${{ github.workspace }}\obs-studio\libobs" `
           -DCREDS="${{ secrets.SPOTIFY_TOKEN }}" `
           -DLASTFM_CREDS="${{ secrets.LASTFM_KEY }}" `
-          -DVLC_INCLUDE_DIR=${{ github.workspace }}\${{ env.project-git }}\vlc\ `
           -DLIBOBS_LIB="${{ github.workspace }}\obs-studio\build32\libobs\RelWithDebInfo\obs.lib" `
           -DOBS_FRONTEND_LIB="${{ github.workspace }}\obs-studio\build32\UI\obs-frontend-api\RelWithDebInfo\obs-frontend-api.lib" `
           -DW32_PTHREADS_LIB="${{ github.workspace }}\obs-studio\build32\deps\w32-pthreads\RelWithDebInfo\w32-pthreads.lib" ..
