--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -128,11 +128,11 @@ jobs:
         run: |
           echo "=> Modifying ${{ env.project-name }}.so"
           install_name_tool \
-          -change /usr/local/opt/qt/lib/QtWidgets.framework/Versions/5/QtWidgets \
+          -change /tmp/obsdeps/lib/QtWidgets.framework/Versions/5/QtWidgets \
             @executable_path/../Frameworks/QtWidgets.framework/Versions/5/QtWidgets \
-          -change /usr/local/opt/qt/lib/QtGui.framework/Versions/5/QtGui \
+          -change /tmp/obsdeps/lib/QtGui.framework/Versions/5/QtGui \
             @executable_path/../Frameworks/QtGui.framework/Versions/5/QtGui \
-          -change /usr/local/opt/qt/lib/QtCore.framework/Versions/5/QtCore \
+          -change /tmp/obsdeps/lib/QtCore.framework/Versions/5/QtCore \
             @executable_path/../Frameworks/QtCore.framework/Versions/5/QtCore \
           ./build/lib${{ env.project-name }}.so
           otool -L ./build/lib${{ env.project-name }}.so
