--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "deps/libmpdclient"]
 	path = deps/libmpdclient
 	url = https://github.com/MusicPlayerDaemon/libmpdclient
+[submodule "deps/mongoose"]
+	path = deps/mongoose
+	url = https://github.com/cesanta/mongoose/
