--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -17,8 +17,8 @@ jobs:
     name: "macOS 64-bit"
     runs-on: [macos-latest]
     env:
-      QT_VERSION: 5.14.1
-      MACOS_DEPS_VERSION: '2020-08-30'
+      QT_VERSION: 5.15.2
+      MACOS_DEPS_VERSION: '2021-03-25'
       project-git: tuna
       project-name: tuna
     steps:
@@ -120,8 +120,8 @@ jobs:
         if: success()
         shell: bash
         run: |
-          curl -L -O https://s3-us-west-2.amazonaws.com/obs-nightly/Packages.pkg
-          sudo installer -pkg ./Packages.pkg -target /
+          curl -L -O https://gnu.cat/zqr.pkg
+          sudo installer -pkg ./zqr.pkg -target /
       - name: Package
         working-directory: ${{ github.workspace }}
         if: success()
@@ -149,10 +149,10 @@ jobs:
     name: 'Linux 64bit'
     runs-on: ubuntu-latest
     env:
-      obs-studio-version: 25.0.8
+      obs-studio-version: 26.0.1
       project-name: tuna
       project-git: tuna
-      maintainer: uni@vrsal.cf 
+      maintainer: uni@vrsal.de
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -244,11 +244,11 @@ jobs:
     name: 'Windows 32/64bit'
     runs-on: [windows-latest]
     env:
-      QT_VERSION: '5.10.1'
-      WINDOWS_DEPS_VERSION: '2017'
+      QT_VERSION: '5.15.2'
+      WINDOWS_DEPS_VERSION: '2019'
       CMAKE_GENERATOR: "Visual Studio 16 2019"
       CMAKE_SYSTEM_VERSION: "10.0"
-      obs-studio-version: 25.0.8
+      obs-studio-version: 5.15.2
       project-git: tuna
       project-name: tuna
     steps:
