--- a/package/README.txt.in
+++ b/package/README.txt.in
@@ -8,10 +8,13 @@ Linux:
 ------
 1. Create a plugin folder in your home directory:
   $ mkdir -p ~/.config/obs-studio/plugins/@CMAKE_PROJECT_NAME@
-2. Extract the bolder bin and data into the newly created folder
+2. Extract the folder bin and data into the newly created folder
   $ mv plugin/* ~/.config/obs-studio/plugins/@CMAKE_PROJECT_NAME@
 
 Windows:
 --------
 1. Extract the archive
-2. Move the contents of plugin into your obs installation directory
+2. Open your obs studio installation directory (Usually C:\Program Files\obs-studio)
+3. Copy the folders "data" and "obs-plugins" into your obs installation directory.
+   "data" contains the translations and additional files, "obs-plugins" the actual plugin
+   You'll need to grant administrative rights to merge the folders.
